descripcion de vinos agregada

--- a/pages/nuestros_vinos/biri-biri.html
+++ b/pages/nuestros_vinos/biri-biri.html
@@ -53,10 +53,7 @@
               </div>
               <div class="col-md-6 col-xs-12">
                   <p>
-                    e color rojo intenso, vivaz, muy frutado, fresco, con ciertas notas de especias y vainilla que suman a su complejidad. En boca vino de buen volumen y acidez equilibrada. 👌Vino para todos los dias, de estructura media. Ideal para platos de la cocina hogareña de potencia media, como pizza, empanadas, pastas. skjxksbckskcnknscs
-                    c,mdlcms
-                    lscms,mc,mdlcms
-                  </p>
+                    De color rojo intenso, vivaz, muy frutado, fresco, con ciertas notas de especias y vainilla que suman a su complejidad. En boca vino de buen volumen y acidez equilibrada. 👌Vino para todos los dias, de estructura media. Ideal para platos de la cocina hogareña de potencia media, como pizza, empanadas, pastas. </p>
                   <p>$XXX,xx</p>
               </div>
           </div>
