--- a/pages/nuestros_vinos/staphyle.html
+++ b/pages/nuestros_vinos/staphyle.html
@@ -53,7 +53,7 @@
               </div>
               <div class="col-md-6 col-xs-12">
                   <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione alias quas voluptates cupiditate maxime autem, eos optio ut perferendis eligendi dolores quis impedit ab ipsum dolorem. Esse, illum expedita!
+                    Vino de color rojo intenso con matices violáceos. En su aroma se identifican frutos rojos maduros como ciruelas y cerezas. Se complementa con notas de vainilla cedidas por su guarda en barricas de roble francés durante 8 meses. Largo de boca, con taninos dulces y profunda estructura.
                   </p>
                   <p>$XXX,xx</p>
               </div>
