--- a/pages/nuestros_vinos/subjetivo_dos.html
+++ b/pages/nuestros_vinos/subjetivo_dos.html
@@ -53,7 +53,9 @@
               </div>
               <div class="col-md-6 col-xs-12">
                   <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione alias quas voluptates cupiditate maxime autem, eos optio ut perferendis eligendi dolores quis impedit ab ipsum dolorem. Esse, illum expedita!
+                    Un malbec bien redondo, frutado y expresivo. Nariz aromática, fruta madura, especias y algo meloso. En boca es un vino suave, mucha fruta, tanino dulzón y paso amplio. El cierre esn medio y persistente.
+
+                    Combina a la perfección con un plato de ternera con ensalada fresca, cordero condimentado con especias  y si es patagónico mucho mejor.
                   </p>
                   <p>$XXX,xx</p>
               </div>
