descripcion de vinos guardada

--- a/pages/nuestros_vinos/vastago-de-gea.html
+++ b/pages/nuestros_vinos/vastago-de-gea.html
@@ -53,7 +53,7 @@
               </div>
               <div class="col-md-6 col-xs-12">
                   <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione alias quas voluptates cupiditate maxime autem, eos optio ut perferendis eligendi dolores quis impedit ab ipsum dolorem. Esse, illum expedita!
+                    De color rojo intenso con destellos violeta. Posee aroma de singular complejidad, exaltando las trazas de los frutos rojos, tales como ciruelas, guindas y cerezas. Untuoso, largo, delicado con el natural atractivo del Malbec de Luján de Cuyo.
                   </p>
                   <p>$XXX,xx</p>
               </div>
