--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -111,7 +111,7 @@
             <div class="col-xs-12 col-md-12 footer_imagenes-estilo">
                 <img src="../assets/images/logos/logofacebook.png" alt="facebook" width="40px">
                 <img src="../assets/images/logos/logoinsta.png" alt="instagram" width="40px">
-                <img src="../assets/images/logos/Ilustración2.png" alt="whatsapp" width="40px">
+                <img src="../assets/images/logos/logowhatsapp.png" alt="whatsapp" width="40px">
             </div>
             <div class="row-center">
               <div class="col-xs-12 col-md-12">
