--- a/pages/nuestros_vinos.html
+++ b/pages/nuestros_vinos.html
@@ -113,7 +113,7 @@
             <div class="col-xs-12 col-md-12 footer_imagenes-estilo">
                 <img src="../assets/images/logos/logofacebook.png" alt="logo de facebook" width="40px">
                 <img src="../assets/images/logos/logoinsta.png" alt="logo de instagram" width="40px">
-                <img src="../assets/images/logos/Ilustración2.png" alt="logo de whatsapp" width="40px">
+                <img src="../assets/images/logos/logowhatsapp.png" alt="logo de whatsapp" width="40px">
             </div>
             <div class="row-center">
               <div class="col-xs-12 col-md-12">
